TODO
 - choose between one / two page modus.
 - progress dialog while exporting / loading
 - Implement disable filter
 - Add ability to scale resulting images after cropping
 - Display page preview instead of original image in image list
 - Load images in background
201210
 - handling two page types (left/right)

201209
 - Saving / Loading project Settings
 - Exporting project to images
 - Propaging page/image settings to other pages/images